	* Support dnxhd codec in ffmpeg worker, closes: #5900.
	* Support pcm codec in ffmpeg worker.
	* Update and make mpeg2_transcode params more consistent.
	* Add enable_fourcc_tagging option for xdcamhd and imx codec in ffmpeg worker.
	* Fix fourcc tags for xdcamhd codec in ffmpeg worker.
	* Enable fourcc tagging with mov container in mpeg2_transcode action.

Version 0.5.0 Released on 2012/03/29

	* Rewrite action API.
	* Add stdout and stderr buffers to Worker class and implement
	  get_error method.
	* Remove get_error implementation from all workers which use it.
	* Add Toolbox2Exception class and make all custom exceptions inherit
	  from this class.
	* Add _finalize method to worker API.
	* Add ffprobe worker.
	* Rename FFMpegWorker to FFmpegWorker.
	* Only sleep when required in Action._execute_worker.
	* Use ffmpeg-static instead of ffmpeg in ffmpeg worker.
	* Add avinfo extract action, closes: #5545.
	* Update code documentation.
	* Implement Worker._handle_output method.
	* Accept non-integer output ids in kttoolbox worker, closes: #5654.

Version 0.4.0 Released on 2012/01/16

	* Fix reading of stdout/stderr output in command module,
	  closes: #5458.
	* Remove read and timeout from Command.wait arguments.

Version 0.3.0 Released on 2012/01/09

	* Add a memory limit to command execution, refs: #5365.
	* Add callback method to action API, refs: #5365.
	* Call user action callback with progress information and
	  action information, closes: #5365.
	* Add videoparser_extract action, closes: #5365.
	* Fix duplicate stdout/stderr output returned by command.
	* Fix classes names of video_extract module.

Version 0.2.0 Released on 2011/11/22

	* Add _get_output_extension to action API, refs: #4588.
	* Let user specify output file extension in manzanita
	  rewrap action, closes: #4588

Version 0.1.1 Released on 2011/07/21

	* Replace _{add|get}_output_tmp_path with _{add|get}_output_path
	  in manzanita rewrap action, closes: #4495.
